# pico-presenter

./: CMakeLists.txt
src/: presenter-bt.cpp  presenter-usb.cpp  presenter.hpp
src/bt/: presenter-bt.cpp  server.c  server_common.c
src/usb/: presenter-usb.cpp
src/usb-own/: presenter-usb.cpp
